Refactors Question aggregate to improve immutability